--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@ alert("¡Bienvendio, aqui hablare sobre mi familia!")},1000)
 <CENTER><video src="VideoFam.mp4" width=300  height=200 controls poster="Mi Familia.jpg"></CENTER>
 </BR>
 </body>
+ <button> <a href= "https://alanglz12.github.io/PaginFinal2/"> INICIO </a> </button>
 <SCRIPT LANGUAGE="JavaScript">var txt=" MI FAMILIA";var espera=140;var refresco=null;function rotulo_title() {document.title=txt;txt=txt.substring(1,txt.length)+txt.charAt(0);refresco=setTimeout("rotulo_title()",espera);}rotulo_title();</script>
 </html>
